traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:27: error: not enough arguments for method setX: (x$1: Int)Unit.
Unspecified value parameter x$1.
      a = setX()
              ^